# homelab-ai

./: .claude-harness-test  .env.example  .gitattributes  .gitignore  AGENTS.md  APPS_DOCUMENTATION.md  CLAUDE.md  CONTEXT.md  GEMINI.md  PLAN-bead-viewer-integration.md  README.md  SERVER_AGENT_PROMPT.md  WORKSPACE-AGENTS.md  connect-server.sh  docker-compose.gaming.yml  docker-compose.server.yml  docker-compose.yml  docker-restart.sh  docker-start.sh  docker-stop.sh  git-sync.sh  index.html  notes.md  protonvpn-wg0.conf  server.md
.beads/: README.md  deletions.jsonl  issues.jsonl  issues.jsonl.backup
.cursor/: config.json
.github/: copilot-instructions.md
abliteration/: Dockerfile  run.sh
agent-gateway/: .dockerignore  Dockerfile  gateway.py  health.py  models.py
agents/: ACTIVATION_GUIDE.md  CLEANUP_SUMMARY.md  LOCAL_FIRST_MIGRATION.md  README.md  SYSTEM_TEST_SUMMARY.md  TEST_RESULTS.md  test_integration.py  test_mcp_tools.py
aoe-canvas/: Dockerfile  SPRITE_PROMPTS.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
autoawq/: Dockerfile  build.sh  patch_catcher.py  quantize.py  run.sh
backend/: alembic.ini
claude-harness/: .dockerignore  AGENT_GATEWAY_ANALYSIS.md  CLAUDE.md  Dockerfile  EXECUTION_PLAN.md  (+7 more)
llm-tui/: pyproject.toml  requirements.txt
llm-tui/llm_tui/: __main__.py  app.py  config.py  models.py
llm-tui/llm_tui/api/: gpu.py  manager.py
llm-tui/llm_tui/widgets/: __init__.py  gpu_panel.py  metrics_panel.py  model_panel.py  model_picker.py  request_log.py
(+2469 files in other folders)
