[project]
name = "llm-tui"
version = "0.1.0"
description = "Terminal UI for monitoring and managing local LLM infrastructure"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
llm-tui = "llm_tui.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
